--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: npm
-    directory: "/"
+    directory: '/'
     schedule:
-      interval: weekly
-      day: sunday
-      time: "09:00"
-      timezone: Asia/Tokyo
+      interval: daily
     open-pull-requests-limit: 5
