--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node .",
     "dev": "nodemon .",
-    "lint": "eslint . --ext .js --fix",
+    "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix"
   },
   "author": "underz#1602",
