--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "fs": "^0.0.1-security",
     "glob": "^8.0.1",
     "mongoose": "^6.3.1"
   }
