--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
     "glob": "^8.0.1",
+    "moment": "^2.29.3",
+    "moment-duration-format": "^2.3.2",
     "mongoose": "^6.3.1"
   }
 }
